--- a/juice/juice.html
+++ b/juice/juice.html
@@ -10,7 +10,7 @@
 <nav class="navbar">
     <img src="image/icons/logo.png" alt="Logo" class="logo-img"> <!-- Added logo -->
     <ul class="nav-links">
-        <li><a href="index.html">Voltar ao Início</a></li>
+        <li><a href="/SEMINARIO_FINAL/index.html?_ijt=l6epprrf63b0j62rvph74jc8de&_ij_reload=RELOAD_ON_SAVE#home">Voltar ao Início</a></li>
     </ul>
     <div class="nav-icons">
         <button class="icon-btn"><img src="image/icons/home-draw.png" alt="Home"></button>
