--- a/SEMINARIO_FINAL/index.html
+++ b/SEMINARIO_FINAL/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<!-- Navigation -->
+
 <nav class="navbar">
-    <img src="icons/logo.png" alt="Logo" class="logo-img"> <!-- Added logo -->
+    <img src="icons/logo.png" alt="Logo" class="logo-img"> 
     <ul class="nav-links">
         <li><a href="index.html">Início</a></li>
-        <li><a href="/recipes/recipes.html">Receitas</a></li>
+        <li><a href="/SEMINARIO_FINAL/recipes/recipes.html#recipes">Receitas</a></li>
         <li><a href="/SEMINARIO_FINAL/juice/juice.html#home">D.Pure</a></li>
     </ul>
     <div class="nav-icons">
@@ -22,7 +22,6 @@
     </div>
 </nav>
 
-<!-- Login Modal -->
 <div id="login-modal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
@@ -37,7 +36,7 @@
     </div>
 </div>
 
-<!-- Seção de Perfil -->
+
 <div id="profile-section" style="display:none;">
     <h2 id="welcome-message"></h2>
     <p>Seja bem-vindo ao seu perfil.</p>
@@ -45,7 +44,6 @@
 </div>
 
 
-<!-- Header -->
 <header>
     <div class="header-content">
         <h1>ESSÊNCIA DA <span class="green-text">NUTRIÇÃO:</span></h1>
@@ -54,7 +52,6 @@
     <img src="image/image.png" alt="Header Image" class="header-img">
 </header>
 
-<!-- Famous Recipes Section -->
 <section id="recipes">
     <div class="recipe-list">
         <div class="recipe">
@@ -75,7 +72,7 @@
     </div>
 </section>
 
-<!-- About Section -->
+
 <section id="about">
     <div class="about-container">
         <img src="image/daniela.png" alt="Imagem de Daniela">
@@ -124,24 +121,24 @@
     <img src="image/img.png" alt="Header Image" class="header-img" width="400">
 </section>
 
-<!-- Famous Juices Section -->
+
 <section id="juices">
     <h2>OS QUERIDINHOS</h2>
     <div class="juice-list">
         <div class="juice">
-            <a href="juice/juice.html">
+            <a href="/SEMINARIO_FINAL/juice/juice.html#home">
                 <img src="image/juice1.png" alt="Juice 1">
                 <h3>PODEROSO</h3>
             </a>
         </div>
         <div class="juice">
-            <a href="juice/juice.html">
+            <a href="/SEMINARIO_FINAL/juice/juice.html#home">
                 <img src="image/juice2.png" alt="Juice 2">
                 <h3>SUPER DIURÉTICO</h3>
             </a>
         </div>
         <div class="juice">
-            <a href="juice/juice.html">
+            <a href="/SEMINARIO_FINAL/juice/juice.html#home">
                 <img src="image/juice3.png" alt="Juice 3">
                 <h3>VERDE DETOX</h3>
             </a>
@@ -149,7 +146,7 @@
     </div>
 </section>
 
-<!-- Footer -->
+
 <footer>
     <div class="social-icons">
         <a href="https://www.instagram.com/daniellapradonutri/"><img src="icons/instagram-draw.png" alt="Instagram"></a>
