--- a/juice/juice.html
+++ b/juice/juice.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav class="navbar">
-    <img src="image/icons/logo.png" alt="Logo" class="logo-img"> <!-- Added logo -->
+    <img src="image/icons/logo.png" alt="Logo" class="logo-img">
     <ul class="nav-links">
         <li><a href="index.html?_ijt=l6epprrf63b0j62rvph74jc8de&_ij_reload=RELOAD_ON_SAVE#home">Voltar ao Início</a></li>
     </ul>
@@ -30,7 +30,6 @@
     </div>
 </div>
 
-<!-- Contêiner de Sucos -->
 <div class="juice-container">
     <div class="juice-card" onclick="showDetails('suco1')">
         <img src="image/juice1.png" alt="Suco 1">
@@ -79,7 +78,6 @@
     </div>
 </div>
 
-<!-- Modal para mostrar os detalhes do suco -->
 <div id="juiceModal" class="modal">
     <div class="modal-content">
         <span class="close-btn" onclick="closeModal()">&times;</span>
