--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav class="navbar">
-    <img src="image/icons/logo.png" alt="Logo" class="logo-img"> <!-- Logo -->
+    <img src="image/icons/logo.png" alt="Logo" class="logo-img">
     <ul class="nav-links">
         <li><a href="/SEMINARIO_FINAL/index.html?_ijt=l6epprrf63b0j62rvph74jc8de&_ij_reload=RELOAD_ON_SAVE#home">Voltar ao Início</a></li>
     </ul>
@@ -18,7 +18,6 @@
     </div>
 </nav>
 
-<!-- Contêiner de Receitas -->
 <div class="recipe-container">
     <div class="recipe-card" onclick="showDetails('recipe1')">
         <img src="image/recipe1.jpg" alt="Receita 1">
@@ -58,7 +57,6 @@
     </div>
 </div>
 
-<!-- Modal para mostrar os detalhes da receita -->
 <div id="recipeModal" class="modal">
     <div class="modal-content">
         <span class="close-btn" onclick="closeModal()">&times;</span>
